bluejay-validator/tests/snapshots/executable_integration_test__error@all_variable_usages_allowed.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/all_variable_usages_allowed.graphql
---
Error: Variable $intArg of type Int cannot be used here, where Boolean is expected
   ╭─[ all_variable_usages_allowed.graphql:3:33 ]
   │
 3 │     booleanArgField(booleanArg: $intArg)
   │                                 ───┬───  
   │                                    ╰───── Cannot use variable of type Int where Boolean is expected
───╯

Error: Variable $booleanListArg of type [Boolean] cannot be used here, where Boolean is expected
   ╭─[ all_variable_usages_allowed.graphql:9:33 ]
   │
 9 │     booleanArgField(booleanArg: $booleanListArg)
   │                                 ───────┬───────  
   │                                        ╰───────── Cannot use variable of type [Boolean] where Boolean is expected
───╯

Error: Variable $booleanArg of type Boolean cannot be used here, where Boolean! is expected
    ╭─[ all_variable_usages_allowed.graphql:15:47 ]
    │
 15 │     nonNullBooleanArgField(nonNullBooleanArg: $booleanArg)
    │                                               ─────┬─────  
    │                                                    ╰─────── Cannot use variable of type Boolean where Boolean! is expected
────╯

Error: Variable $booleanList of type [Boolean] cannot be used here, where [Boolean!] is expected
    ╭─[ all_variable_usages_allowed.graphql:21:52 ]
    │
 21 │     nonNullBooleanListField(nonNullBooleanListArg: $booleanList)
    │                                                    ──────┬─────  
    │                                                          ╰─────── Cannot use variable of type [Boolean] where [Boolean!] is expected
────╯
